BUG FIX: Apply min-height values to article elements to prevent cropping on small mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,7 @@ body {
 body>* {
     position: relative;
     overflow-x: hidden;
+    min-width: 100%;
 }
 
 ul {
@@ -179,6 +180,7 @@ main {
 
 article {
     height: 100vh;
+    min-height: 38rem;
     padding-top: 20vw;
     flex-direction: column;
 }
